--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Document</title>
+  <title>Peter Saxton</title>
 
   <meta name="description" content="Distributed programming, judicious use of DevOps and advancing the Web, Some thoughts and opinions from Peter Saxton">
   <meta name="author" content="Peter Saxton">
