clean up language

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <nav>
     <a href="https://github.com/CrowdHailer">github</a>
     <a href="https://twitter.com/CrowdHailer">twitter</a>
+    <a href="http://insights.workshop14.io">Company blog</a>
   </nav>
   <section>
     <h1>Starting Something</h1>
@@ -26,7 +27,7 @@
     </p>
     <p>
       New technologies will only be added if they are clearly valuable additions.
-      At present this site follows the excellent design guidelines over at <a href="http://motherfuckingwebsite.com/">motherfucking website</a>.
+      At present this site follows the excellent design guidelines over at <a href="http://motherfuckingwebsite.com/">this fruity website</a>.
       The styling will evolve and improve over time, perhaps, but it will never get in the way of delivering content.
     </p>
     <p>
