make the styling a little friendly

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 
   <meta name="description" content="Distributed programming, judicious use of DevOps and advancing the Web, Some thoughts and opinions from Peter Saxton">
   <meta name="author" content="Peter Saxton">
+
+  <style type="text/css">
+  body {
+    margin: 40px auto;
+    max-width: 650px;
+    line-height: 1.6;
+    font-size: 18px;
+    color: #444;
+    padding: 0 10px;
+  }
+
+  h1, h2, h3 {
+    line-height:1.2
+  }
+  </style>
 </head>
 <body>
   <h1>Peter Saxton</h1>
