add talks section to website

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <a href="http://insights.workshop14.io">Company blog</a>
   </nav>
   <section>
+    <h1>Talks</h1>
+    <h2>Building with domain concepts</h2>
+    <p>
+      All useful software is applied to a particular problem domain. This talk will encourage the use of value objects to better model a programs problem domain.
+    </p>
+    <nav>
+      <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video</a>
+      <a href="">Slides. (To be found)</a>
+    </nav>
+  </section>
+  <section>
     <h1>Starting Something</h1>
     <p>
       This is my new blog and I am dedicated to developing it in a way new to me.
