put bio on font page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
     <a href="http://insights.workshop14.io">Company blog</a>
   </nav>
   <section>
+    <h1>Bio</h1>
+    <p>
+      My background is physics- I have an MPhys from Oxford and started a Phd in Scotland following some travelling.
+      I found the Phd was not well suited to me and I left to find faster feedback in the real world.
+      An intense introduction to Ruby on the Makers Academy 3 month coding course was the change of direction I needed.
+    </p>
+    <p>
+      I haven't looked back.
+      I freelanced immediately after graduating Makers, working on projects involving Ruby, JavaScript and Elixir.
+      Recently I have been working at a proptech start-up as a senior developer, this time with Scala.
+    </p>
+    <p>
+      A regular participant in hacknights and meet-ups in London I am always learning something new.
+      I am keen to share my latest insights and have written and presented on the topic of Domain Driven Design.
+      Currently I am enjoying seeing how DDD concepts merge with the rigor of functional languages.
+    </p>
+    <p>
+      My primary aim is to become a software craftsman and to build the future of the web.
+    </p>
+    <p>
+      Outside of programming, I enjoy surfing, Terry Pratchett and Dartmoor.
+    </p>
+  </section>
+  <section>
     <h1>Talks</h1>
     <h2>Building with domain concepts</h2>
     <p>
