--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Where is the most relevant work in this area being done at the moment?
       Currently I am looking at <a href="https://ipfs.io/">IPFS</a>, <a href="https://lasp-lang.org/">LASP</a> and <a href="http://hood.ie/">hood.ie</a>, but I am sure I have missed some.
       If anyone else is tackling this problem it would be great to hear about it.
-      For everyone else if you are interested in the theory and execution of distributed data storage stay posted.
+      For everyone else interested in the theory and execution of distributed data storage stay posted.
     </p>
   </section>
   <section>
