add slides for DDD lightning talk

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       All useful software is applied to a particular problem domain. This talk will encourage the use of value objects to better model a programs problem domain.
     </p>
     <nav>
-      <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video</a>
-      <a href="">Slides. (To be found)</a>
+      <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video (8th February 2016 in London at CodeNode)</a>
+      <a href="talks/building-with-domain-concepts">Slides</a>
     </nav>
   </section>
 </body>
