add raxx slides and video

--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
   </section>
   <section>
     <h1>Talks</h1>
+    <h2>Introducing Raxx, an Elixir Webserver Interface</h2>
+    <p>
+      A quick overview of why the Raxx project and some experiments conducted so far.
+    </p>
+    <nav>
+      <a href="https://www.youtube.com/watch?v=80AXtvXFIA4">Video (22nd September 2016 in at Elixir.LDN)</a>
+      <a href="talks/introducing-raxx">Slides</a>
+    </nav>
     <h2>Building with domain concepts</h2>
     <p>
       All useful software is applied to a particular problem domain. This talk will encourage the use of value objects to better model a programs problem domain.
