complete ace talk brief

--- a/talks/index.html
+++ b/talks/index.html
@@ -59,13 +59,20 @@
         <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video - CodeNode 2016-02-08</a>
       </nav>
     </article>
+    <hr>
     <article class="">
-      <h1>Building a Server with Elixir</h1>
+      <h1>Ace an Education in TCP</h1>
       <p>
-        Delivered as a chess talk. (link to chess talk)
+        <a href="https://github.com/CrowdHailer/ace">Ace</a> is a TCP server that was built with the design priority of having welcoming source code.
+        I wanted to learn more about the network layer and how to work with erlang/OTP.
       </p>
       <p>
-        maybe it could be an intro talk at the rail ldn as well.
+        This talk shows the path from simple echo functionality to a robust general purpose server.
+        The challenges and encountered along the way.
+        And why Elxir was such a perfect fit for this project.
+      </p>
+      <p>
+        It may also be possible to present this or similar as an more technical introduction to why BEAM to other communities.
       </p>
     </article>
     <article>
