ruby based talks on DDD

--- a/talks/index.html
+++ b/talks/index.html
@@ -78,11 +78,27 @@
     <article>
       <h1>Application border control</h1>
       <p>
-        Extension of building on domain concepts.
+        Lets build programs that express the problem domain.
+        This is one of the best ideas from Domain Driven Design.
+        However how to we have a progam composed of rich objects that make use of libraries that don't have the same semantics.
+        How do we prevent our application from getting bogged down in implementation details.
+        This talk discusses the above and in particular tackles the most pernicious implementation detail of HTTP servers.
+      </p>
+      <p>
+        In many ways this is the extension of "building on domain concepts", although all necesary ground about value objects is covered.
       </p>
     </article>
     <article>
-      <h1>Mastery over rails</h1>
+      <h1>Rails the library</h1>
+      <p>
+        Rails is part of your toolkit and yet it makes a lot of demands for your time.
+        Not just building a CRUD application?
+        This talk discusses putting Rails in the corner and letting your application be more than a Rails app.
+      </p>
+      <p>
+        The content of this talk is based on production applications that have followed this approach.
+        The guidance for the development was from the ideas of bounded contexts and pluggable services from Domain Driven Design
+      </p>
     </article>
     <article>
       <h1>Object Oriented programming, One more time.</h1>
