finish talks id like to give

--- a/talks/index.html
+++ b/talks/index.html
@@ -103,7 +103,18 @@
     <article>
       <h1>Object Oriented programming, One more time.</h1>
       <p>
-        objects -> facts/actors
+        Spoiler: Objects come in two flavours, Facts and Actors.
+      </p>
+      <p>
+        Functional Programming(FP) and Object Oriented Programming(OOP) are often presented as opposites.
+        Alan Kay doesn't mention classes and yet these are the first part of any tutorial on OOP.
+        Joe Armstrong the creator of erlang, a clearly functional language, describes it as perhaps the only object oriented language.
+      </p>
+      <p>
+        This talk tries to clear up some of the many issues around OOP.
+        OOP makes everything an object.
+        I will argue this is a valid and yet useless.
+        By getting more specific about the types of objects that exist we reconcile our difference and move on to a glorious future, perhaps.
       </p>
     </article>
   </main>
