talks link from homepage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <style type="text/css">
   body {
+    font-family: sans-serif;
     margin: 40px auto;
     max-width: 650px;
     line-height: 1.6;
@@ -28,6 +29,7 @@
 <body>
   <h1>Peter Saxton</h1>
   <nav>
+    <a href="/talks">talks</a><br>
     <a href="https://github.com/CrowdHailer">github</a>
     <a href="https://twitter.com/CrowdHailer">twitter</a>
     <a href="http://insights.workshop14.io">Company blog</a>
@@ -108,25 +110,6 @@
     <p>
       Outside of programming, I enjoy surfing, Terry Pratchett and Dartmoor.
     </p>
-  </section>
-  <section>
-    <h1>Talks</h1>
-    <h2>Introducing Raxx, an Elixir Webserver Interface</h2>
-    <p>
-      A quick overview of why the Raxx project and some experiments conducted so far.
-    </p>
-    <nav>
-      <a href="https://www.youtube.com/watch?v=80AXtvXFIA4">Video (22nd September 2016 in at Elixir.LDN)</a>
-      <a href="talks/introducing-raxx">Slides</a>
-    </nav>
-    <h2>Building with domain concepts</h2>
-    <p>
-      All useful software is applied to a particular problem domain. This talk will encourage the use of value objects to better model a programs problem domain.
-    </p>
-    <nav>
-      <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video (8th February 2016 in London at CodeNode)</a>
-      <a href="talks/building-with-domain-concepts">Slides</a>
-    </nav>
   </section>
 </body>
 </html>
