--- a/talks/index.html
+++ b/talks/index.html
@@ -45,7 +45,7 @@
         This talk is quick overview of why I undertook the project and some thoughts on progress at the time.
       </p>
       <nav>
-        <a href="talks/introducing-raxx">Slides</a><br>
+        <a href="/talks/introducing-raxx">Slides</a><br>
         <a href="https://www.youtube.com/watch?v=80AXtvXFIA4">Video - Elixir.LDN 2016-09-22</a>
       </nav>
     </article>
@@ -55,7 +55,7 @@
         All useful software is applied to a particular problem domain. This talk will encourage the use of value objects to better model a programs problem domain.
       </p>
       <nav>
-        <a href="talks/building-with-domain-concepts">Slides</a><br>
+        <a href="/talks/building-with-domain-concepts">Slides</a><br>
         <a href="https://skillsmatter.com/skillscasts/7454-building-with-domain-concepts">Video - CodeNode 2016-02-08</a>
       </nav>
     </article>
