improve font-stack

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <style type="text/css">
   body {
-    font-family: sans-serif;
+    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
     margin: 40px auto;
     max-width: 650px;
     line-height: 1.6;
