--- a/talks/index.html
+++ b/talks/index.html
@@ -41,7 +41,7 @@
     <article>
       <h1>Introducing Raxx, an Elixir Webserver Interface</h1>
       <p>
-        <a href="https://github.com/CrowdHailer/raxx">Raxx</a> is a personal project investigating the value of a [rack]() style interface to the Elixir ecosystem.
+        <a href="https://github.com/CrowdHailer/raxx">Raxx</a> is a personal project investigating the value of a rack style interface to the Elixir ecosystem.
         This talk is quick overview of why I undertook the project and some thoughts on progress at the time.
       </p>
       <nav>
