--- a/talks/index.html
+++ b/talks/index.html
@@ -10,21 +10,8 @@
   <meta name="description" content="Distributed programming, judicious use of DevOps and advancing the Web, Some thoughts and opinions from Peter Saxton">
   <meta name="author" content="Peter Saxton">
 
-  <style type="text/css">
-  body {
-    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-    margin: 40px auto;
-    max-width: 650px;
-    line-height: 1.6;
-    font-size: 18px;
-    color: #444;
-    padding: 0 10px;
-  }
+  <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
 
-  h1, h2, h3 {
-    line-height:1.2
-  }
-  </style>
 </head>
 <body>
   <main>
