add edit page link

--- a/index.html
+++ b/index.html
@@ -98,5 +98,8 @@
       So here's to writing <a href="http://thedailywtf.com/articles/Programming-Sucks!-Or-At-Least%2c-It-Ought-To-">boring code</a>.
     </p>
   </section>
+  <footer>
+    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/index.html" class="edit-page-link">Edit this page</a>
+  </footer>
 </body>
 </html>
