--- a/talks/index.html
+++ b/talks/index.html
@@ -105,5 +105,8 @@
       </p>
     </article>
   </main>
+  <footer>
+    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/talks/index.html" class="edit-page-link">Edit this page</a>
+  </footer>
 </body>
 </html>
