proof reading session

--- a/talks/index.html
+++ b/talks/index.html
@@ -73,17 +73,26 @@
         Building a server from the ground up with Elixir.
       </p>
       <p>
-        <a href="https://github.com/CrowdHailer/ace">Ace</a> was built with one unusual design priority; To have simple to understand source code.
+        <a href="https://github.com/CrowdHailer/ace">Ace</a> was built with one unusual design priority; to have simple to understand source code.
         I created it to learn more about the network layer. Valuable at a time when microservices are bringing networking issues to the fore.
       </p>
       <p>
-        This talk shows the path from simple echo functionality to a robust general purpose server.
-        Discusses the challenges and lessons encountered along the way.
-        Finally covering why Elxir was such a perfect fit for this project.
+        This talk:
+        <ul>
+          <li>
+            shows the path from simple echo functionality to a robust general purpose server;
+          </li>
+          <li>
+            discusses the challenges and lessons encountered along the way; and
+          </li>
+          <li>
+            covers why Elixir was such a perfect fit for this project.
+          </li>
+        </ul>
       </p>
       <hr>
       <p class="footnote">
-        It may also be possible to present this or similar as an more technical introduction to why BEAM to other communities.
+        It may also be possible to present this or similar topics as a more technical introduction to why to use BEAM for other communities.
       </p>
     </article>
     <article>
@@ -96,9 +105,8 @@
         These two paradigms are often presented as opposites.
       </p>
       <p>
-        To Alan Kay classes are a minor detail of OOP,
-        In many tutorials on the subject classes are cornerstone.
-        Joe Armstrong the creator of erlang describes it as perhaps the only true object oriented language.
+        To Alan Kay classes are a minor detail of OOP; in many tutorials on the subject, classes are a cornerstone.
+        Joe Armstrong, the creator of erlang, describes it as perhaps the only true OOP language.
         Yet many consider it to be a leading example of a functional language.
       </p>
       <p>
@@ -107,11 +115,11 @@
         By expanding what it means to be an object we can reconcile some of the differences between the two camps.
       </p>
       <p>
-        Finally having solved this argument we can move on to a glorious future for programming, perhaps.
+        Finally having solved this argument we can move on to a glorious future for programming (perhaps).
       </p>
       <hr>
       <p class="footnote">
-        This could definetly do with a better title.
+        This could definitely do with a better title.
       </p>
     </article>
     <article>
@@ -123,19 +131,19 @@
         Rails is just one part of your toolkit, yet it makes a lot of demands for your attention.
         Not just building a CRUD application?
         Unsure which model to use for a new feature?
-        Perhaps we need to look carefully at what Rails leaves to you the developer.
+        Perhaps we need to look carefully at what Rails leaves to you, the developer.
       </p>
       <p>
-        This talk looks to advance the audiences  understanding of MVC.
-        It will introduce a few complimentary ideas from Domain Driven Design and Hexagonal Architecture.
+        This talk looks to advance the audiences understanding of MVC.
+        It will introduce a few complementary ideas from Domain Driven Design and Hexagonal Architecture.
       </p>
       <p>
-        All with the goal of building applications that more than just a Rails app.
+        All with the goal of building applications that are more than just Rails apps.
       </p>
       <hr>
       <p class="footnote">
         The content of this talk is based on production applications that have followed this approach.
-        The guidance for the development was from the ideas of bounded contexts and pluggable services from Domain Driven Design
+        The guidance for the development was from the ideas of bounded contexts and pluggable services from Domain Driven Design.
       </p>
     </article>
     <article>
@@ -152,7 +160,7 @@
       </p>
       <hr>
       <p class="footnote">
-        In many ways this is the extension of "building on domain concepts", although all necesary ground about value objects is covered.
+        In many ways this is the extension of "building on domain concepts", although all necessary ground about value objects is covered.
       </p>
     </article>
   </main>
