run over cv to simplify and reduce content

--- a/curriculum-vitae/index.html
+++ b/curriculum-vitae/index.html
@@ -5,52 +5,76 @@
     <title>Curriculum Vitae: Peter Saxton</title>
     <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
 
+    <style media="screen">
+      main.cv {
+        max-width: 800px;
+      }
+      h1 {
+        color: #005098;
+      }
+    </style>
   </head>
   <body>
-    <main>
-      <h1>Summary</h1>
+    <header>
+      <h1>Peter Saxton</h1>
+      <nav>
+        <a href="https://github.com/CrowdHailer">github.com/CrowdHailer</a>
+        <a href="https://twitter.com/CrowdHailer">twitter.com/CrowdHailer</a>
+      </nav>
+    </header>
+    <main class="cv">
       <p>
-        I am an experienced Ruby developer having lead several projects. I have also delivered projects in JavaScript and Elixir.
+        I am an experienced Ruby developer and have lead several development efforts.
+        I have also delivered products in JavaScript and Elixir.
       </p>
       <p>
-        I am an a keen advocate of Domain Driven Design, believing it to be the best way to reliably deliver value. Several articles on the topic are available on my blog.
+        I am an advocate of Domain Driven Design, referencing its methods to reliably deliver value.
+        Several articles on the topic are available on my blog.
       </p>
       <p>
-        My personal efforts have included, creating a webapp to look through the world, a TCP server written in Elixir and an alternative tube map for London.
+        My personal projects have included, creating a webapp to look through the world, a TCP server written in Elixir and an alternative tube map for London.
       </p>
       <h1>Skills</h1>
+      <hr>
       <h2>Ruby</h2>
       <p>
-        I have used MiniTest and RSpec, as well as Cucumber to share tests between clients in different language. Pushing test metrics is not productive, but tests should give you confidence. Having confidence in tests has allowed me to give a non-technical client access to push changes to production.
+        <b>Testing:</b> Experience with MiniTest and RSpec, as well as Cucumber to build a cross language test suite.
+        Nurturing robust test suits has allowed me to have non-technical clients actively contributing to development.
       </p>
       <p>
-        I have exposure to Rails and supporting gems, such as devise. However for some projects it is over weight, so I have also deployed both Padrino and Sinatra applications. The growing cohort of viable alternatives, Hanami and roda included, is something that I have been watching with interest
+        <b>Frameworks:</b> Worked on projects with and without Rails.
+        Alternative frameworks I have used to deploy applications include Padrino and Sinatra.
+        I keep up to date on the growing cohort of viable alternatives, such as Hanami and Roda.
       </p>
       <h2>JavaScript</h2>
       <p>
-        From the Zoo of possibilities I have built systems that made use of Vue.js, Redux.js and Ampersand.js.
-        I find the prototype model in JS understandable, even elegant, and so will happily work on JS without the extra layers provided by Angular/Ember.
+        <b>Frameworks:</b> Most recently built systems that made use of Vue.js, Redux.js and Ampersand.js.
+        Thorough understanding of JavaScript's protoype model, even finding it elegant,.
+        This allows me to work without a reliance on particular frameworks.
       </p>
       <p>
-        I think frontend testing is perfectly possible, but should be conducted in a pragmatic way to ensure so that the cost does not start to outweigh the benefits. I have used Jasmine and believe it to be very similar to other options such as
+        <b>Testing:</b> Used Jasmine to test frontend code.
+        Employ a pragmatic approach so that the cost of maintainence does not start to outweigh the benefits of testing.
       </p>
       <h2>Elixir</h2>
       <p>
-        This language is currently my passion, I find immutable data and the functional paradigm very conmplementary to my way of thinking. The concurrency model suggests a world of possibilites that I have not seen in other Languages.
+        <b>Language:</b> Currently my passion, I find immutable data and the functional paradigm a natural way to express problems.
+        The concurrency model suggests a world of possibilites that I have not seen in other Languages.
       </p>
       <p>
-        The job I had in Elixir was a translation service between different websocket API's. It was a project which would not have benifitted from Phoenix. The Phoenix web framework is something I would like to investigate further.
+        <b>Web:</b> The job I had in Elixir was a translation service between different websocket API's. It was a project which would not have benifitted from Phoenix. The Phoenix web framework is something I would like to investigate further.
       </p>
       <h1>Open Source and Community</h1>
+      <hr>
       <p>
-        I keep as many side projects as possible open source. Some of the most interesting ones on my github are.
+        Many of my personal projects are open source and available on github. Below are highlighted a few of the most interesting.
       </p>
       <ul>
         <li>
           <a href="https://github.com/CrowdHailer/OK">OK:</a> adding Try monads to Elixir for error handling.
         </li>
         <li>
-          <a href="https://github.com/CrowdHailer/vulcanize">Vulcanize:</a> Ruby form objects to coerce user input using your domain objects.
+          <a href="https://github.com/CrowdHailer/vulcanize">Vulcanize:</a> Ruby form objects to coerce user input using application domain objects.
         </li>
         <li>
           <a href="https://github.com/CrowdHailer/level">Level:</a> A spirit level webapp, built in Vanilla JS.
@@ -62,12 +86,13 @@
       <p>
         I enjoy blogging and speaking to share new techniques and practises. Check out my <a href="/talks">talks</a> and previous <a href="insights.workshop14.io">blog</a>.
       </p>
-      <h1>Work History</h1>
+      <h1>Timeline</h1>
+      <hr>
       <h2>Goodlord</h2>
       <h3>Senior Software Developer</h3>
       <h4>Feb 2016 - Oct 2016</h4>
       <p>
-        As one of two intitial hires at Goodlord I was tasked with bringing an existing prototype application in house. Through the rebuild process I moved to being primarily responsible for the front end code, a sophisticated single page web app. I had to coordinate discussions between the designer, buisness demands and backend team; as well as coding on a daily basis.
+        As one of two intitial developers hired at Goodlord I was tasked with bringing an existing prototype application in house. Through the rebuild process I moved to being primarily responsible for the frontend code, a sophisticated single page web app. I had to coordinate discussions between the designer, buisness demands and backend team; as well as coding on a daily basis.
       </p>
       <h2>Workshop 14 Limited</h2>
       <h3>Lead Software Developer</h3>
